--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
           <h2 class="hide-h-two">Features</h2>
           <ul class="list section-two-list">
             <li class="list-items">
+              <div class="icons-container">
+                <svg class="svgs" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="text-h-three text-section-two">Strategy</h3>
               <p class="text text-section-two-info">
                 Our goal is to identify the business problem to walk away with
@@ -73,6 +78,11 @@
               </p>
             </li>
             <li class="list-items">
+              <div class="icons-container">
+                <svg class="svgs" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="text-h-three text-section-two">Punctuality</h3>
               <p class="text text-section-two-info">
                 Bring the key message to the brand's audience for the best price
@@ -80,6 +90,11 @@
               </p>
             </li>
             <li class="list-items">
+              <div class="icons-container">
+                <svg class="svgs" width="64" height="64">
+                  <use href="./images/icons.svg#icon-computer"></use>
+                </svg>
+              </div>
               <h3 class="text-h-three text-section-two">Diligence</h3>
               <p class="text text-section-two-info">
                 Research and confirm brands that present the strongest digital
@@ -87,6 +102,11 @@
               </p>
             </li>
             <li class="list-items">
+              <div class="icons-container">
+                <svg class="svgs" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="text-h-three text-section-two">Technologies</h3>
               <p class="text text-section-two-info">
                 Design practice focused on digital experiences. We bring forth a
@@ -142,6 +162,36 @@
               <div class="text-list-ourteam">
                 <h3 class="text-h-three-ourteam">Mark Guerrero</h3>
                 <p class="text text-ourteam">Product Designer</p>
+                <ul class="logos-people">
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-backround">
@@ -154,6 +204,36 @@
               <div class="text-list-ourteam">
                 <h3 class="text-h-three-ourteam">Tom Ford</h3>
                 <p class="text text-ourteam">Frontend Developer</p>
+                <ul class="logos-people">
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="list-backround">
@@ -166,6 +246,36 @@
               <div class="text-list-ourteam">
                 <h3 class="text-h-three-ourteam">Camila Garcia</h3>
                 <p class="text text-ourteam">Marketing</p>
+                <ul class="logos-people">
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
 
@@ -179,7 +289,86 @@
               <div class="text-list-ourteam">
                 <h3 class="text-h-three-ourteam">Daniel Wilson</h3>
                 <p class="text text-ourteam">UI Designer</p>
+                <ul class="logos-people">
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="logos-people-icons">
+                    <a class="logos-people-link" href="">
+                      <svg class="svgs" width="40" height="40">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="customers">
+        <div class="container">
+          <h2 class="customers-header">Customers</h2>
+          <ul class="customers-list">
+            <li class="customers-inside">
+              <a class="customers-link" href=" ">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-inside">
+              <a class="customers-link" href="">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-inside">
+              <a class="customers-link" href="">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-inside">
+              <a class="customers-link" href="">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-inside">
+              <a class="customers-link" href="">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="customers-inside">
+              <a class="customers-link" href="">
+                <svg class="customers-icons" width="104" height="56">
+                  <use href="./images/icons.svg#icon-Logo6"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -187,14 +376,49 @@
     </main>
 
     <footer class="fotter-background footer-container">
-      <div class="container">
-        <a class="logo link footer-link" href="./index.html"
-          >Web<span class="logo-span-fotter">Studio</span></a
-        >
-        <p class="text-fotter">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer">
+        <div class="footer-position">
+          <a class="logo link footer-link" href="./index.html"
+            >Web<span class="logo-span-fotter">Studio</span></a
+          >
+          <p class="text-fotter">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="socials-container">
+          <p class="socials-text">Social media</p>
+          <ul class="socials-list">
+            <li class="socials-icons">
+              <a class="socials-link" href="">
+                <svg class="socials-icons-display" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icons">
+              <a class="socials-link" href="">
+                <svg class="socials-icons-display" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icons">
+              <a class="socials-link" href="">
+                <svg class="socials-icons-display" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-icons">
+              <a class="socials-link" href="">
+                <svg class="socials-icons-display" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
