--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
 
           <ul class="list list-portfolio-main">
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/bankApp.jpg" class="link buttons-link">
                 <img
                   src="./images/bankApp.jpg"
                   width="360"
@@ -89,7 +89,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/cashlessPayment.jpg" class="link buttons-link">
                 <img
                   src="./images/cashlessPayment.jpg"
                   width="360"
@@ -104,7 +104,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/meditationApp.jpg" class="link buttons-link">
                 <img
                   src="./images/meditationApp.jpg"
                   width="360"
@@ -119,7 +119,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/taxiService.jpg" class="link buttons-link">
                 <img
                   src="./images/taxiService.jpg"
                   width="360"
@@ -134,7 +134,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/screenIllustrations.jpg" class="link buttons-link">
                 <img
                   src="./images/screenIllustrations.jpg"
                   width="360"
@@ -149,7 +149,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/onlineCourses.jpg" class="link buttons-link">
                 <img
                   src="./images/onlineCourses.jpg"
                   width="360"
@@ -164,7 +164,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/instagramStories.jpg" class="link buttons-link">
                 <img
                   src="./images/instagramStories.jpg"
                   width="360"
@@ -181,7 +181,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/organicFood.jpg" class="link buttons-link"></a>
                 <img
                   src="./images/organicFood.jpg"
                   width="360"
@@ -197,7 +197,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a class="link">
+              <a  href="./images/freshCoffe.jpg" class="link buttons-link">
                 <img
                   src="./images/freshCoffe.jpg"
                   width="360"
