--- a/portfolio.html
+++ b/portfolio.html
@@ -72,7 +72,7 @@
 
           <ul class="list list-portfolio-main">
             <li class="list-portfolio-images">
-              <a  href="./images/bankApp.jpg" class="link buttons-link">
+              <a href="./images/bankApp.jpg" class="link buttons-link">
                 <img
                   src="./images/bankApp.jpg"
                   width="360"
@@ -89,7 +89,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a  href="./images/cashlessPayment.jpg" class="link buttons-link">
+              <a href="./images/cashlessPayment.jpg" class="link buttons-link">
                 <img
                   src="./images/cashlessPayment.jpg"
                   width="360"
@@ -104,7 +104,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a  href="./images/meditationApp.jpg" class="link buttons-link">
+              <a href="./images/meditationApp.jpg" class="link buttons-link">
                 <img
                   src="./images/meditationApp.jpg"
                   width="360"
@@ -119,7 +119,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a  href="./images/taxiService.jpg" class="link buttons-link">
+              <a href="./images/taxiService.jpg" class="link buttons-link">
                 <img
                   src="./images/taxiService.jpg"
                   width="360"
@@ -134,7 +134,10 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a  href="./images/screenIllustrations.jpg" class="link buttons-link">
+              <a
+                href="./images/screenIllustrations.jpg"
+                class="link buttons-link"
+              >
                 <img
                   src="./images/screenIllustrations.jpg"
                   width="360"
@@ -149,7 +152,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a  href="./images/onlineCourses.jpg" class="link buttons-link">
+              <a href="./images/onlineCourses.jpg" class="link buttons-link">
                 <img
                   src="./images/onlineCourses.jpg"
                   width="360"
@@ -164,7 +167,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a  href="./images/instagramStories.jpg" class="link buttons-link">
+              <a href="./images/instagramStories.jpg" class="link buttons-link">
                 <img
                   src="./images/instagramStories.jpg"
                   width="360"
@@ -181,13 +184,12 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a  href="./images/organicFood.jpg" class="link buttons-link"></a>
+              <a href="./images/organicFood.jpg" class="link buttons-link">
                 <img
                   src="./images/organicFood.jpg"
                   width="360"
                   height="300"
-                  alt="
-              woman carrying weighing scales"
+                  alt="woman carrying weighing scales"
                 />
                 <div class="list-portfolio-description">
                   <h2 class="portfolio-text-h-two">Organic Food</h2>
@@ -197,7 +199,7 @@
             </li>
 
             <li class="list-portfolio-images">
-              <a  href="./images/freshCoffe.jpg" class="link buttons-link">
+              <a href="./images/freshCoffe.jpg" class="link buttons-link">
                 <img
                   src="./images/freshCoffe.jpg"
                   width="360"
